--- a/index.html
+++ b/index.html
@@ -46,9 +46,21 @@
 	from { opacity: 0; }
 	to { opacity: 1; }
 }
-			#intro .actions {
-	display: flex;
-	justify-content: center;
+#intro .actions {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+}
+#intro .actions li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+#intro .actions a.button {
+    text-align: center;
+    width: 100%;
+    max-width: 300px; /* ou la taille que tu veux */
 }
 		</style>
 	</head>
@@ -63,7 +75,7 @@
     <p>Audiovisuel ⸱ Cinéma ⸱ Montage ⸱ Photographie</p>
     <ul class="actions">
 		<li>
-			<a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue
+			<a href="#header" class="button icon solid solo fa-arrow-down scrolly">‎ 
 			</a>
 		</li> 
 	</ul> 
@@ -163,12 +175,16 @@
 								<header>
 									<h2><a href="#">courts-métrages<br /></a></h2>
 								</header>
-								<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+								<a href="#" class="image fit" onclick="openModalVideos(); return false;">
+									<img src="images/DÖD.png" alt="" />
+								</a>
 								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
+									<li>
+										<a href="#" class="button" onclick="openModalVideos(); return false;">Voir</a>
+									</li>
 								</ul>
 							</article>
+							
 							<article>
 								<header>
 									<span class="date">April 7, 2017</span>
@@ -189,27 +205,30 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
         <div id="gallery" class="gallery">
-    <div class="thumbnail fade-in" onclick="openViewer(gallery1Images, 0, 'large-img', 'gallery', 'large-image')"
+    <div class="thumbnail fade-in" onclick="showLarge('images/rue.jpg')">
         <img src="images/rue.jpg" alt="Photo 1">
     </div>
 
-    <div class="thumbnail fade-in" onclick="openViewer(gallery1Images, 1, 'large-img', 'gallery', 'large-image')"
+    <div class="thumbnail fade-in" onclick="showLarge('images/rose.jpg')">
         <img src="images/rose.jpg" alt="Photo 2">
     </div>
 
-    <div class="thumbnail fade-in" onclick="openViewer(gallery1Images, 2, 'large-img', 'gallery', 'large-image')"
+    <div class="thumbnail fade-in" onclick="showLarge('images/batiment1.jpg')">
         <img src="images/batiment1.jpg" alt="Photo 3">
     </div>
 			
-	<div class="thumbnail fade-in" onclick="openViewer(gallery1Images, 3, 'large-img', 'gallery', 'large-image')"
-        <img src="images/oiseaux.jpg" alt="Photo 4">
+	 <div class="thumbnail fade-in" onclick="showLarge('images/noiretblanc.jpg')">
+        <img src="images/noiretblanc.jpg" alt="Photo 4">
+    </div>
+			
+	<div class="thumbnail fade-in" onclick="showLarge('images/oiseaux.jpg')">
+        <img src="images/oiseaux.jpg" alt="Photo 5">
 	 </div>
 </div>
-       <div id="large-image" class="large-image" style="display:none;">
-	<div class="nav left" onclick="prevImage()"></div>
-	<img id="large-img" src="">
-	<div class="nav right" onclick="nextImage()"></div>
-</div>
+        <div id="large-image" class="large-image" style="display: none;">
+            <img id="large-img" src="" alt="Grande image">
+            <button style="margin-top:15px;" onclick="backToGallery()">Revenir à la galerie</button>
+        </div>
     </div>
 </div>
 
@@ -254,10 +273,9 @@
 </div>
 
 <div id="large-image2" class="large-image" style="display:none;">
-	<div class="nav left" onclick="prevImage()"></div>
-	<img id="large-img2" src="">
-	<div class="nav right" onclick="nextImage()"></div>
-</div>
+     <img id="large-img2">
+         <button onclick="backToGallery2()">Revenir à la galerie</button>
+        </div>
     </div>
 </div>
 
@@ -316,12 +334,17 @@
 	<div class="thumbnail fade-in" onclick="showLarge3('images/portrait13.jpg')">
         <img src="images/portrait13.jpg">
     </div>
+			
+	<div class="thumbnail fade-in" onclick="showLarge3('images/portrait14.jpg')">
+        <img src="images/portrait14.jpg">
+    </div>
 </div>
 
-<div id="large-image3" class="large-image" style="display:none;">
-	<div class="nav left" onclick="prevImage()"></div>
-	<img id="large-img3" src="">
-	<div class="nav right" onclick="nextImage()"></div>
+<div id="large-image3" class="large-image" style="display:none; position:relative;">
+    <button class="prev" onclick="prevImage3()">&#10094;</button>
+    <img id="large-img3" src="" alt="Grande image">
+    <button class="next" onclick="nextImage3()">&#10095;</button>
+    <button class="close-btn" onclick="backToGallery3()">Revenir à la galerie</button>
 </div>
     </div>
 </div>
@@ -362,10 +385,9 @@
 </div>
 
 <div id="large-image4" class="large-image" style="display:none;">
-	<div class="nav left" onclick="prevImage()"></div>
-	<img id="large-img4" src="">
-	<div class="nav right" onclick="nextImage()"></div>
-</div>
+     <img id="large-img4">
+         <button onclick="backToGallery4()">Revenir à la galerie</button>
+        </div>
     </div>
 </div>
 
@@ -411,13 +433,55 @@
 </div>
 
 <div id="large-image5" class="large-image" style="display:none;">
-	<div class="nav left" onclick="prevImage()"></div>
-	<img id="large-img5" src="">
-	<div class="nav right" onclick="nextImage()"></div>
-</div>
+     <img id="large-img5">
+         <button onclick="backToGallery5()">Revenir à la galerie</button>
+        </div>
     </div>
 </div>
+<div id="modalVideos" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModalVideos()">&times;</span>
 
+    <!-- Galerie -->
+<div id="galleryVideos" class="gallery">
+
+  <div class="thumbnail fade-in"
+       onclick="showVideo('https://www.youtube.com/embed/1Mja8tMPmmc')">
+    <img src="https://img.youtube.com/vi/1Mja8tMPmmc/hqdefault.jpg">
+  </div>
+ <div class="thumbnail fade-in"
+       onclick="showVideo('https://www.youtube.com/embed/PgySILbVU0c')">
+    <img src="https://img.youtube.com/vi/PgySILbVU0c/hqdefault.jpg">
+  </div>
+</div>
+
+	<div class="modal-separator">
+  <span>Projets lycée</span>
+</div>
+	<div id="galleryVideosLycee" class="gallery">
+
+ <div class="thumbnail fade-in"
+       onclick="showVideo('https://www.youtube.com/embed/838EboJXgMQ')">
+    <img src="https://img.youtube.com/vi/838EboJXgMQ/hqdefault.jpg">
+  </div>
+</div>
+    <!-- Vidéo en grand -->
+    <div id="large-video" class="large-image" style="display:none;">
+<iframe id="videoPlayer"
+        width="100%"
+        height="500"
+        src=""
+        frameborder="0"
+        allow="autoplay; fullscreen"
+        allowfullscreen>
+</iframe>
+
+      <button style="margin-top:15px;" onclick="backToGalleryVideos()">
+        Revenir à la galerie
+      </button>
+    </div>
+  </div>
+</div>
 <!-- Styles pour la modale (inchangés, mais assurez-vous qu'ils sont dans <head> ou ici) -->
 <style>
     .modal {
@@ -451,12 +515,27 @@
         cursor: pointer;
     }
     .close:hover { color: #000; }
-    .gallery {
-		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-		gap: 10px;
-        margin-top: 15px;
-    }
+.gallery {
+    column-count: 4;
+    column-gap: 10px;
+    margin-top: 15px;
+}
+
+.thumbnail {
+    break-inside: avoid;
+    margin-bottom: 10px;
+    cursor: pointer;
+    opacity: 0;
+    animation: fadeIn 1s ease-in forwards;
+}
+
+.thumbnail img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 4px;
+    display: block;
+}
     .thumbnail {
         cursor: pointer;
         opacity: 0;
@@ -469,28 +548,84 @@
     .thumbnail:nth-child(5) { animation-delay: 0.5s; }
     .thumbnail:nth-child(6) { animation-delay: 0.6s; }
     .thumbnail:nth-child(7) { animation-delay: 0.7s; }
+	.thumbnail:nth-child(8) { animation-delay: 0.8s; }
+    .thumbnail:nth-child(9) { animation-delay: 0.85s; }
+    .thumbnail:nth-child(10) { animation-delay: 0.9s; }
+    .thumbnail:nth-child(11) { animation-delay: 0.92s; }
+    .thumbnail:nth-child(12) { animation-delay: 0.98s; }
+    .thumbnail:nth-child(13) { animation-delay: 1s; }
+    .thumbnail:nth-child(14) { animation-delay: 1.05s; }
+	.thumbnail:nth-child(15) { animation-delay: 1.1s; }
+    .thumbnail:nth-child(16) { animation-delay: 1.12s; }
+    .thumbnail:nth-child(17) { animation-delay: 1.18s; }
+    .thumbnail:nth-child(18) { animation-delay: 1.2s; }
     /* Ajoutez des délais pour plus d'images */
-    .thumbnail img {
-    width: 100%;
-    height: 230px;
-    object-fit: cover;
-    border-radius: 4px;
-    }
     .large-image {
-        text-align: center;
-    }
-    .large-image img {
-        max-width: 100%;
-        max-height: 80vh;
-    }
+    text-align: center;
+    position: relative;
+}
+.large-image img {
+    max-width: 100%;
+    max-height: 80vh;
+}
+.large-image .prev,
+.large-image .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 2em;
+    background: rgba(0,0,0,0.3);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+.large-image .prev { left: 10px; }
+.large-image .next { right: 10px; }
+.large-image .close-btn {
+    margin-top: 10px;
+    padding: 5px 10px;
+}
+.modal-separator {
+  display: flex;
+  align-items: center;
+  margin: 30px 0;
+  opacity: 0;
+  animation: fadeIn 1.4s ease forwards;
+}
+
+.modal-separator::before,
+.modal-separator::after {
+  content: "";
+  flex: 1;
+  height: 1px;
+  background: rgba(0,0,0,0.2);
+}
+
+.modal-separator span {
+  padding: 0 15px;
+  font-size: 0.9em;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  color: #333;
+}
     @keyframes fadeIn {
         from { opacity: 0; transform: translateY(20px); }
         to { opacity: 1; transform: translateY(0); }
     }
-	@media (max-width: 768px) {
-		.gallery {
-			grid-template-columns: repeat(2, 1fr);
-    }
+	@media (max-width: 1000px) {
+  .gallery { column-count: 3; }
+}
+
+@media (max-width: 768px) {
+  .gallery { column-count: 2; }
+}
+
+@media (max-width: 480px) {
+  .gallery { column-count: 2; }
+}
+
 </style>
 
 <!-- Script JavaScript corrigé -->
@@ -501,7 +636,7 @@
 
     function closeModal() {
         document.getElementById('modal').style.display = 'none';
-        document.getElementById('gallery').style.display = 'grid';
+        document.getElementById('gallery').style.display = 'block';
         document.getElementById('large-image').style.display = 'none';
     }
 
@@ -510,12 +645,10 @@
         document.getElementById('gallery').style.display = 'none';
         document.getElementById('large-image').style.display = 'block';
     }
-
-    function backToGallery() {
-        document.getElementById('large-image').style.display = 'none';
-        document.getElementById('gallery').style.display = 'grid';
-    }
-
+	function backToGallery() {
+		document.getElementById('large-image').style.display = 'none';
+		document.getElementById('gallery').style.display = 'block';
+	}
     // Fermer la modale en cliquant en dehors
     window.onclick = function(event) {
         if (event.target == document.getElementById('modal')) {
@@ -543,7 +676,7 @@
 
     function closeModal2() {
         document.getElementById('modal2').style.display = 'none';
-        document.getElementById('gallery2').style.display = 'grid';
+        document.getElementById('gallery2').style.display = 'block';
         document.getElementById('large-image2').style.display = 'none';
     }
 
@@ -555,7 +688,7 @@
 
     function backToGallery2() {
         document.getElementById('large-image2').style.display = 'none';
-        document.getElementById('gallery2').style.display = 'grid';
+        document.getElementById('gallery2').style.display = 'block';
     }
 
 
@@ -567,19 +700,47 @@
 
     function closeModal3() {
         document.getElementById('modal3').style.display = 'none';
-        document.getElementById('gallery3').style.display = 'grid';
+        document.getElementById('gallery3').style.display = 'block';
         document.getElementById('large-image3').style.display = 'none';
     }
 
-    function showLarge3(src) {
-        document.getElementById('large-img3').src = src;
-        document.getElementById('gallery3').style.display = 'none';
-        document.getElementById('large-image3').style.display = 'block';
-    }
+let currentIndex3 = 0;
+const images3 = [
+    'images/portrait1.jpg',
+    'images/portrait2.jpg',
+    'images/portrait3.jpg',
+    'images/portrait4.jpg',
+    'images/portrait5.jpg',
+    'images/portrait6.jpg',
+    'images/portrait7.jpg',
+    'images/portrait8.jpg',
+    'images/portrait9.jpg',
+    'images/portrait10.jpg',
+    'images/portrait11.jpg',
+    'images/portrait12.jpg',
+    'images/portrait13.jpg',
+    'images/portrait14.jpg'
+];
 
+function showLarge3(src) {
+    currentIndex3 = images3.indexOf(src); // trouve l'index de l'image
+    document.getElementById('large-img3').src = src;
+    document.getElementById('gallery3').style.display = 'none';
+    document.getElementById('large-image3').style.display = 'block';
+}
+
+function nextImage3() {
+    currentIndex3 = (currentIndex3 + 1) % images3.length;
+    document.getElementById('large-img3').src = images3[currentIndex3];
+}
+
+function prevImage3() {
+    currentIndex3 = (currentIndex3 - 1 + images3.length) % images3.length;
+    document.getElementById('large-img3').src = images3[currentIndex3];
+}
     function backToGallery3() {
         document.getElementById('large-image3').style.display = 'none';
-        document.getElementById('gallery3').style.display = 'grid';
+        document.getElementById('gallery3').style.display = 'block';
     }
 
     /* ---------- QUATRIEME GALERIE ---------- */
@@ -590,7 +751,7 @@
 
     function closeModal4() {
         document.getElementById('modal4').style.display = 'none';
-        document.getElementById('gallery4').style.display = 'grid';
+        document.getElementById('gallery4').style.display = 'block';
         document.getElementById('large-image4').style.display = 'none';
     }
 
@@ -602,7 +763,7 @@
 
     function backToGallery4() {
         document.getElementById('large-image4').style.display = 'none';
-        document.getElementById('gallery4').style.display = 'grid';
+        document.getElementById('gallery4').style.display = 'block';
     }
 
  /* ---------- CINQUIEME GALERIE ---------- */
@@ -613,7 +774,7 @@
 
     function closeModal5() {
         document.getElementById('modal5').style.display = 'none';
-        document.getElementById('gallery5').style.display = 'grid';
+        document.getElementById('gallery5').style.display = 'block';
         document.getElementById('large-image5').style.display = 'none';
     }
 
@@ -625,9 +786,49 @@
 
     function backToGallery5() {
         document.getElementById('large-image5').style.display = 'none';
-        document.getElementById('gallery5').style.display = 'grid';
+        document.getElementById('gallery5').style.display = 'block';
     }
 </script>
+
+<script>
+function openModalVideos() {
+  document.getElementById('modalVideos').style.display = 'flex';
+}
+
+function closeModalVideos() {
+  document.getElementById('modalVideos').style.display = 'none';
+  backToGalleryVideos();
+}
+
+function showVideo(url) {
+  // cacher toutes les miniatures et le séparateur
+  document.getElementById('galleryVideos').style.display = 'none';
+  document.getElementById('galleryVideosLycee').style.display = 'none';
+  document.querySelector('.modal-separator').style.display = 'none';
+
+  // afficher la vidéo
+  document.getElementById('large-video').style.display = 'block';
+  document.getElementById('videoPlayer').src = url + '?autoplay=1&rel=0'; // <-- ici ok
+}
+
+function backToGalleryVideos() {
+  document.getElementById('videoPlayer').src = '';
+  document.getElementById('large-video').style.display = 'none';
+
+  // réafficher miniatures et séparateur
+  document.getElementById('galleryVideos').style.display = 'block';
+  document.getElementById('galleryVideosLycee').style.display = 'block';
+  document.querySelector('.modal-separator').style.display = 'flex';
+}
+
+// clic en dehors = fermer
+window.addEventListener('click', function(e) {
+  if (e.target === document.getElementById('modalVideos')) {
+    closeModalVideos();
+  }
+});
+</script>
+
 					<!-- Footer -->
 						<footer>
 							<div class="pagination">
@@ -709,64 +910,7 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-		<script>
-const gallery1Images = [
-	'images/rue.jpg',
-	'images/rose.jpg',
-	'images/batiment1.jpg',
-	'images/oiseaux.jpg'
-];
-</script>
-		<script>
-let currentImages = [];
-let currentIndex = 0;
-let currentImgElement = null;
-
-function openViewer(images, index, imgId, galleryId, largeId) {
-	currentImages = images;
-	currentIndex = index;
-	currentImgElement = document.getElementById(imgId);
-
-	currentImgElement.src = currentImages[currentIndex];
-	document.getElementById(galleryId).style.display = 'none';
-	document.getElementById(largeId).style.display = 'block';
-}
-
-function nextImage() {
-	currentIndex = (currentIndex + 1) % currentImages.length;
-	currentImgElement.src = currentImages[currentIndex];
-}
-
-function prevImage() {
-	currentIndex =
-		(currentIndex - 1 + currentImages.length) % currentImages.length;
-	currentImgElement.src = currentImages[currentIndex];
-}
-</script>
-<script>
-let startX = 0;
-
-document.addEventListener('touchstart', e => {
-	startX = e.touches[0].clientX;
-});
-
-document.addEventListener('touchend', e => {
-	let endX = e.changedTouches[0].clientX;
-	let diff = endX - startX;
-
-	if (Math.abs(diff) > 50) {
-		if (diff > 0) prevImage();
-		else nextImage();
-	}
-});
-</script>
 
 </body>
 
 </html>
-
-
-
-
-
-
