--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
 <div id="large-image3" class="large-image" style="display:none; position:relative;">
     <button class="prev" onclick="prevImage3()">&#10094;</button>
-    <img id="large-img3" src="" alt="Grande image">
+    <img id="large-img3" src="" alt="">
     <button class="next" onclick="nextImage3()">&#10095;</button>
     <button class="close-btn" onclick="backToGallery3()">Revenir à la galerie</button>
 </div>
@@ -560,26 +560,27 @@
     .thumbnail:nth-child(17) { animation-delay: 1.18s; }
     .thumbnail:nth-child(18) { animation-delay: 1.2s; }
     /* Ajoutez des délais pour plus d'images */
-    .large-image {
-    text-align: center;
+  .large-image {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     position: relative;
 }
 .large-image img {
-    max-width: 100%;
+    max-width: 80%;
     max-height: 80vh;
 }
 .large-image .prev,
 .large-image .next {
-    position: absolute;
+    position: absolute; /* IMPORTANT */
     top: 50%;
     transform: translateY(-50%);
-    font-size: 2em;
-    background: rgba(0,0,0,0.3);
-    color: white;
+    background: none;
     border: none;
-    padding: 10px;
+    color: white;
+    font-size: 2em;
     cursor: pointer;
-    border-radius: 50%;
+    z-index: 10;
 }
 .large-image .prev { left: 10px; }
 .large-image .next { right: 10px; }
@@ -619,13 +620,16 @@
 }
 
 @media (max-width: 768px) {
-  .gallery { column-count: 2; }
-}
-
+  .large-image img {
+      max-width: 90%;
+      max-height: 70vh;
+  }
 @media (max-width: 480px) {
-  .gallery { column-count: 2; }
+  .large-image .prev,
+  .large-image .next {
+      font-size: 2.5em;
+  }
 }
-
 </style>
 
 <!-- Script JavaScript corrigé -->
@@ -932,5 +936,6 @@ window.addEventListener('click', function(e) {
 </body>
 
 </html>
+
 
 
